force-app/main/default/objects/Project_Revenue__c/Project_Revenue__c.object-meta.xml
<CustomObject>
    <label>Project Revenue</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Project Revenue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Revenues</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>