force-app/main/default/objects/Project_Revenue__c/fields/Direct_Margin__c.field-meta.xml
<CustomField>
    <fullName>Direct_Margin__c</fullName>
    <description>Direct Margin for the Period</description>
    <inlineHelpText>Enter the DM$ for the period</inlineHelpText>
    <label>Direct Margin $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>