force-app/main/default/objects/Project_Revenue__c/fields/Government_FY__c.field-meta.xml
<CustomField>
    <fullName>Government_FY__c</fullName>
    <label>Government FY</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Year</valueSetName>
    </valueSet>
</CustomField>