force-app/main/default/objects/Project_Revenue__c/fields/Period_Name__c.field-meta.xml
<CustomField>
    <fullName>Period_Name__c</fullName>
    <label>Period Name</label>
    <length>12</length>
    <type>Text</type>
</CustomField>