force-app/main/default/objects/Project_Revenue__c/fields/Revenue__c.field-meta.xml
<CustomField>
    <fullName>Revenue__c</fullName>
    <description>Period revenue</description>
    <inlineHelpText>Enter the Revenue for the period</inlineHelpText>
    <label>Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>