force-app/main/default/objects/Project_Revenue__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Period_Name__c</columns>
    <columns>Project__c</columns>
    <columns>Revenue__c</columns>
    <columns>Direct_Margin__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>